centering the div

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Full viewport height */
+            margin: 0; /* Remove default body margin */
+            /*font-family: Arial, sans-serif;  Optional: better font rendering */
+        }
+        div {
+            text-align: center; /* Center the text inside the div */
+        }
+    </style>
 </head>
 <body>
     <div>به زودی</div>
-    
 </body>
 </html>
