--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh; /* Full viewport height */
-            margin: 0; /* Remove default body margin */
-            /*font-family: Arial, sans-serif;  Optional: better font rendering */
+            height: 100vh;
+            /* Full viewport height */
+            margin: 0;
+            /* Remove default body margin */
+            font-family: 'Vazirmatn', sans-serif;
+            /* Apply Vazirmatn font */
         }
+
         div {
-            text-align: center; /* Center the text inside the div */
+            text-align: center;
+            /* Center the text inside the div */
         }
     </style>
 </head>
+
 <body>
-    <div>به زودی</div>
+    <div>
+        به زودی
+    </div>
 </body>
+
 </html>
