--- a/index.html
+++ b/index.html
@@ -17,18 +17,53 @@
             /* Remove default body margin */
             font-family: 'Vazirmatn', sans-serif;
             /* Apply Vazirmatn font */
+            direction: rtl;
+            font-size: 1rem;
         }
 
-        div {
-            text-align: center;
+        .main-div {
+            text-align: justify;
             /* Center the text inside the div */
         }
     </style>
 </head>
 
 <body>
-    <div>
-        به زودی
+    <div class="main-div">
+        <div>
+            به راهنمای برنامه خانه هوشمند نوید خوش آمدید.
+        </div>
+        <div>
+            پس از نصب برنامه و باز کردن آن برای نخستین بار، باید نام کاربری (ایمیل) و رمز عبور خود را وارد کنید که باید از فروشنده محصول آنها را دریافت کرده باشید. پس از وارد کردن ایمیل و رمز عبور و ورود، به صفحه‌ی  خانه هدایت خواهید شد.
+        </div>
+        <div>
+            ولی پیش از هر کاری در پایین صفحه با زدن گزینه بیشتر به تب آخر بروید. در بالای صفحه، با زدن چرخ دنده وارد صفحه پروفایل بشوید.
+        </div>
+        <div>
+            <h4>
+                صفحه پروفایل:
+            </h4>
+        </div>
+        <div>
+            می‌توانید نام کاربری (ایمیل) خود را در این قسمت تغییر دهید. همچنین می‌توانید نام و نام خانوادگی خود را اضافه کنید که در تب بیشتر به جای ایمیل نمایش داده خواهد شد. پس از وارد کردن اطلاعات نام کاربری و یا نام و نام خانوادگی، با زدن تیک بالای صفحه تغییرات اعمال می‌شود.
+        </div>
+        <div>
+            همچنین با کلیک بر روی دکمه تغییر رمز می‌توانید رمز ورود خود را تغییر دهید. پس از تغییر نام کاربری و رمز عبور به صفحه قبل بازگردید و با زدن گزینه خانه به صفحه پنل‌ها بروید.
+        </div>
+        <div>
+            <h4>
+                پنل‌ها:
+            </h4>
+        </div>
+        <div>
+            در صفحه‌ی خانه، پنل خود را خواهید یافت که در آن می‌توانید تنظیمات مربوط به دستگاه خود را پیدا کنید. در صورت داشتن بیش از یک دستگاه، به تعداد دستگاه‌ها پنل در صفحه خود خواهید یافت. با کلیک بر روی آن، کنترل‌های مربوط به دستگاه را در آنها خواهید یافت.
+        </div>
+        <div>
+            در پایین صفحه، تب‌ دستگاه‌ها دیده می‌شود. در این تب با زدن گزینه همه دستگاه‌ها می‌توان وضعیت فعال بودن و نبودن دستگاه‌ها را مشاهده کرد.
+        </div>
+        <div>
+            حالا به تب بیشتر باز می‌گردیم. در این تب، گزینه دارایی‌ها نشان‌دهنده مشخصات مکان دستگاه‌هاست. برای خروج از این اکانت و استفاده از اکانت دیگر هم می‌توانید از خروج استفاده کنید.
+        </div>
     </div>
 </body>
 
