adding devices title

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             در صفحه‌ی خانه، پنل خود را خواهید یافت که در آن می‌توانید تنظیمات مربوط به دستگاه خود را پیدا کنید. در صورت داشتن بیش از یک دستگاه، به تعداد دستگاه‌ها پنل در صفحه خود خواهید یافت. با کلیک بر روی آن، کنترل‌های مربوط به دستگاه را در آنها خواهید یافت.
         </div>
         <div>
+            <h4>
+                دستگاه‌ها:
+            </h4>
+        </div>
+        <div>
             در پایین صفحه، تب‌ دستگاه‌ها دیده می‌شود. در این تب با زدن گزینه همه دستگاه‌ها می‌توان وضعیت فعال بودن و نبودن دستگاه‌ها را مشاهده کرد.
         </div>
         <div>
