fixing the background color

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             /* Apply Vazirmatn font */
             direction: rtl;
             font-size: 1rem;
+            background-color: white;
         }
 
         .main-div {
